--- a/src/Components/Admin/InfoUserMain/InfoUserMain.css
+++ b/src/Components/Admin/InfoUserMain/InfoUserMain.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 10px;
 }
 .iconName{
     width: 70px;
