--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -14,7 +14,12 @@
     color: var(--blanco);
 }
 .FooterContain a img{
-    width: 120px;
+    width: 100px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 .Footer{
     display: flex;
