--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,12 @@
   --bg-color: #000;
   --gris:#fafafa;
   --gris2:#f3eeee;
-  --color1:#010066 ;
-  --color2:#0449a9 ;
+  --color1:#2979ae ;
+  --color2:#57bf33 ;
   --color3:rgba(1, 67, 172, 0.167);
   --blanco: #fff;
   --input:#c1bfbf;
-  --loading:#0076e479;
+  --loading:#2979ae8e;
 }
 
 
