--- a/src/Components/Admin/AuthCliente/AuthCliente.css
+++ b/src/Components/Admin/AuthCliente/AuthCliente.css
@@ -1,3 +1,8 @@
+.AuthContainerClient{
+    display: flex;
+    gap: 10px;
+}
+
 .modalAuth-content {
     width: 100%;
     display: flex;
@@ -86,6 +91,23 @@
     border-radius: 10px ;
     background-color: var(--color1);
     font-weight: 500;
+}
+
+.authButtonRegister{
+    padding: 7px 25px;
+    border-radius: 10rem;
+    border: 1px solid var(--color1);
+    cursor: pointer;
+    background: linear-gradient(90deg, var(--color1) 27%, var(--color2)120%);
+    color: var(--blanco);
+}
+.authButtonLogin{
+    padding: 7px 25px;
+    border-radius: 10rem;
+    border: 1px solid var(--color1);
+    cursor: pointer;
+    color: var(--textcolor2);
+    background-color: transparent;
 }
 @media (max-width: 1024px){
     .modalAuth {
