--- a/src/Components/Banners/Banners.css
+++ b/src/Components/Banners/Banners.css
@@ -1,6 +1,6 @@
 #swiper_container{
    width: 100%;
-   height: 100vh;
+   height: 90vh;
 }
 
 #SwiperSlide-scroll {
@@ -21,45 +21,87 @@
     width: 100%;
     display: flex;
     align-items: left;
-    justify-content:center;
+    justify-content:space-between;
     padding: 20px 10%;
+    gap: 1rem;
+    display: flex;
+    align-items: center;
+}
+.bannerText2{
+    display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 50%;
+   
+}
+.bannerText2 hr{
+    background-color: var(--blanco);
+    height: 8px;
+    width: 5rem;
+    border-radius: 6px;
+   
 }
 .bannerText h1{
     color: var(--blanco);
-    font-size: 60px;
-    width: 70%;
+    font-size: 45px;
+    
 }
 .bannerText h3{
     color: var(--blanco);
-    font-size: 25px;
+    font-size: 20px;
 }
 .bannerText p{
     color: var(--blanco);
     font-size: 20px;
 }
+.bannerText img{
+   width: 30%!important;
+   border-radius: 34px 34px 0 0;
+   margin-bottom: -20%;
+   -webkit-border-radius: 34px 34px 0 0;
+   -moz-border-radius: 34px 34px 0 0;
+   -ms-border-radius: 34px 34px 0 0;
+   -o-border-radius: 34px 34px 0 0;
+}
 
 
-@media (max-width: 700px){
+@media (max-width: 900px){
    
 .bannerText{
-    padding:20px 6%;
+    padding: 100px 6% 0;
     gap: 1.2rem;
-   
+    flex-direction: column;
 }
 .bannerText h1{
     color: var(--blanco);
-    font-size: 35px;
+    font-size: 30px;
     width: 100%;
 }
 .bannerText h3{
     color: var(--blanco);
-    font-size: 25px;
+    font-size: 18px;
 }
 .bannerText p{
     color: var(--blanco);
     font-size: 16px;
+}
+
+
+.bannerText2{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+   
+}
+#swiper_container{
+    
+    height: 100vh;
+ }
+ .bannerText img{
+    width: 50%!important;
+    border-radius: 20px 20px 0 0;
+    
 }
      
 }
