--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -13,18 +13,19 @@ nav{
     align-content: center;
     width: 100%;
     transition: all 0.2s linear;
-    padding: 10px 10% ;
+    padding: 8px 10% ;
     background-color: transparent;
+    background-color: var(--blanco);
    
 
 }
-.nav-scroll{
+/* .nav-scroll{
     background-color: var(--color1);
 }
 .nav-scroll .iconUser{ 
     background-color: var(--blanco);
     color: var(--color1);
-}
+} */
 .deFLexNavs{
     display: flex !important;
     flex-direction: row !important;
@@ -52,7 +53,7 @@ nav{
 .nav_toggle span{
     width: 25px;
     height: 3px;
-    background: var(--blanco);
+    background: var(--color1);
     margin-bottom: 5px;
     border-radius: 20px;
     transform-origin: 3px 0px;
@@ -77,7 +78,7 @@ nav{
 
 
 .logo img{
-    width: 120px;
+    width: 220px;
   
 }
 .logo h1{
@@ -108,7 +109,7 @@ nav{
 
 
 .enlaces a{
-    color: var(--blanco);
+    color: var(--text-color2);
     text-decoration: none;
     display: flex;
   
@@ -177,8 +178,8 @@ nav{
    color: var(--blanco);
 }
 .bgNav{
-    background-color: var(--color1);
-    padding: 20px;
+  
+    padding: 20px 20px 0;
 }
 @media (max-width: 900px) {
     .deNoneNav{
@@ -217,6 +218,10 @@ nav{
     color: var(--blanco);
 }
 
+.logo img{
+    width: 200px;
+  
+}
  
 
 }
