--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   --color3:rgba(1, 67, 172, 0.167);
   --color4:#2979ae ;
   --color5:#11edccb6 ;
+  --color6:#de11ed58 ;
   --blanco: #fff;
   --input:#c1bfbf;
   --loading:#2979ae8e;
