--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -15,7 +15,22 @@
     flex-direction: column;
     gap: 1rem;
     width: 50%;
+    /* text-align: center;
+    justify-content: center;
+    place-content: center;
+    align-self: center;
+    align-content: center; */
 }
+/* .abouText .BtnContact{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    justify-content: center;
+    align-self: center;
+  
+   
+} */
 .abouText h1{
     color: var(--color1);
     font-size: 40px;
@@ -27,7 +42,11 @@
 .abouText p{
     color: var(--text-color2);
     font-size: 15px;
+    text-align: justify;
+    width: 100%;
 }
+
+
 @media (max-width: 900px){
     .About{
         display: flex;
@@ -40,11 +59,31 @@
     }
     .abouText{
         width: 100%;
+        
     }
     .abouText h1{
         font-size: 30px;
     }
     .abouText h3{
         font-size: 20px;
+    }
+    .abouText{
+      
+        text-align: center;
+        justify-content: center;
+        place-content: center;
+        align-self: center;
+        align-content: center;
+    }
+    .abouText .BtnContact{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        text-align: center;
+        justify-content: center;
+        align-self: center;
+    }
+    .abouText p{
+        text-align: center;
     }
 }
