--- a/src/Components/Aliados/Aliados.css
+++ b/src/Components/Aliados/Aliados.css
@@ -5,11 +5,21 @@
 }
 
 #SwiperSlide-scroll-aliados{
-    width: 17rem;
+    width: 20rem;
     margin: 10px;
 }
 #SwiperSlide-scroll-aliados img{
     width: 100%;
     height: 4rem;
     object-fit: contain;
+}
+@media (max-width: 900px){
+    #swiper_container_aliados{
+        margin: 0px 3%;
+        margin-bottom: 50px;
+        
+    }
+    #SwiperSlide-scroll-aliados{
+        width: 14rem;
+    }
 }
