--- a/src/Components/CalculoAhorro/CalculoAhorro.css
+++ b/src/Components/CalculoAhorro/CalculoAhorro.css
@@ -12,6 +12,11 @@
     display: flex;
     gap: 10px;
 }
+.deFlexInputsCalculo2{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 .Calculo2ContainText{
     padding: 20px;
     border-radius: 10px;
@@ -34,7 +39,7 @@
 }
 #CalculoContainText{
     border: 1px solid var(--input);
-    padding: 100px 20px;
+    padding: 30px 20px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -95,16 +100,17 @@
 }
 
 .Modal {
-    background: white;
+    background: var(--blanco);
     padding: 20px;
     border-radius: 8px;
-    width: 300px;
+    width: 400px;
     margin: auto;
 
 }
 
+
 .Overlay {
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.43);
     position: fixed;
     top: 0;
     left: 0;
@@ -113,6 +119,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
+}
+.Modal input{
+    padding: 10px;
+    border-radius: 7px;
+    border: none;
+    background-color: var(--gris);
+}
+.Modal select{
+    padding: 10px;
+    border-radius: 7px;
+    border: none;
+    background-color: var(--gris);
+    margin-bottom: 10px;
+}
+.Modal label{
+    color: var(--text-color2);
+    padding:0 0 7px 0;
+}
+
+.Modal h2{
+    color: var(--text-color2);
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 form div {
@@ -175,6 +205,11 @@ form input, form select {
     }
     .deFlexInputsCalculo span{
         font-size: 12px;
+    }
+
+    .Modal{
+        width: 90%;
+        height: auto;
     }
    
 }
